# MEGAcmd_sdk

bindings/ios/: MEGASdk.mm
bindings/ios/include/: MEGARequest.h  MEGASdk.h
bindings/java/nz/mega/sdk/: MegaApiJava.java
cmake/modules/: sdklib_target.cmake
cmake/vcpkg_overlay_ports/libdeflate/: portfile.cmake
cmake/vcpkg_overlay_ports/pdfium/: include_gcc16.patch  portfile.cmake
dockerfile/: linux-build.dockerfile
examples/megacli/: megacli.cpp
examples/simple_client/: README.md  simple_client.cpp
include/: megaapi.h  megaapi_impl.h
include/mega/: command.h  db.h  filesystem.h  json.h  localpath.h  logging.h  megaclient.h  megaclientprefs.h  nodemanager.h  sc_streaming_parser.h  testhooks.h  tree_filters.h  version.h
include/mega/android/: androidFileSystem.h
include/mega/common/: logging.h
include/mega/db/: sqlite.h
include/mega/fuse/common/: logging.h
include/mega/osx/: megafs.h  osxutils.h
include/mega/win32/: megafs.h
jenkinsfile/: Jenkinsfile_MR_linux_cmake  Jenkinsfile_MR_windows_cmake
jenkinsfile/specific-branches/: megasdk-all-docker-targets.groovy  megasdk-all-linux-builds-packages.groovy
src/: filesystem.cpp  json.cpp  localpath.cpp  megaapi.cpp  megaapi_impl.cpp  megaclient.cpp  megaclientprefs.cpp  node.cpp  nodemanager.cpp  sc_streaming_parser.cpp  sync.cpp  tree_filters.cpp
src/android/: androidFileSystem.cpp
src/common/: logger.cpp  transaction.cpp
src/crypto/: cryptopp.cpp
src/db/: sqlite.cpp
src/fuse/supported/common/: file_io_context.cpp  inode.cpp
src/fuse/supported/platform/posix/: session_base.cpp
src/fuse/supported/platform/posix/mega/fuse/platform/: session_base.h
src/fuse/supported/platform/windows/: dispatcher.cpp
src/osx/: fs.cpp  osxutils.mm
src/posix/: fs.cpp  net.cpp
src/win32/: fs.cpp
tests/integration/: CMakeLists.txt  SdkTestCreateAccount_test.cpp  SdkTestFolderController_test.cpp  SdkTestListAllNodesByPage_test.cpp  SdkTestMassiveActionPackets_test.cpp  SdkTestPersistConnections_test.cpp  SdkTestSyncVersionedNodeDeletion_test.cpp  SdkTestTransferPriorityRestore_test.cpp  SdkTest_test.cpp  SdkTest_test.h  Sync_test.cpp  integration_test_utils.cpp  integration_test_utils.h  main.cpp  sdk_test_sc_channel.cpp  sdk_test_share_nested.cpp  sdk_test_shares.cpp  sdk_test_shares.h  sdk_test_sync_upload_operations_test.cpp  test.h
tests/integration/test-data/: email_processor.py
tests/unit/: CMakeLists.txt  ChildNodeLookup_test.cpp  Crypto_test.cpp  DefaultedDbTable.h  FileFingerprint_CRC_test.cpp  Logging_test.cpp  SqliteNodesPerf_test.cpp  Sqlite_test.cpp  file_access_tests.cpp  jsonsplitter_test.cpp  megaclient_test.cpp  sc_streaming_parser_test.cpp  uripath_test.cpp  utils_test.cpp
